[tool.poetry]
name = "electronics-shop-project"
version = "0.1.0"
description = ""
authors = ["Kirill Dmitruk <dmitruk.ks@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
